# blazeweb

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  VAULT8_SCRAPE_FINDINGS.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml
experiments/chromiumoxide_spike/: .gitignore  Cargo.toml  bench_vs_playwright.sh  playwright_bench.py
experiments/chromiumoxide_spike/src/: main.rs
experiments/servo_spike/: urls_bench_big.txt
python/blazeclient/: __init__.py
python/blazeweb/: __init__.py  __main__.py  _download_chrome.py  _logging.py  config.py  session.py
python/blazeweb/presets/: __init__.py  archival.py  recon.py  stealth.py
scripts/: download-chrome.py  gauntlet.py
src/: chrome.rs  client.rs  config.rs  dom.rs  engine.rs  error.rs  lib.rs  pool.rs  result.rs  runtime.rs  session.rs
src/css/: convert.rs  convert_tests.rs  layout.rs  layout_tests.rs  mod.rs  resolve.rs  resolve_tests.rs  stylo_bridge.rs  stylo_bridge_tests.rs  text.rs  text_tests.rs  ua.css
src/dom/: arena.rs  arena_tests.rs  mod.rs  node.rs  selector.rs  selector_tests.rs  serialize.rs  serialize_tests.rs  treesink.rs  treesink_tests.rs
src/js/: events.rs  executor.rs  executor_tests.rs  fetch.rs  mod.rs  modules.rs  modules_tests.rs  mutation_observer.rs  runtime.rs  runtime_tests.rs  templates.rs  timers.rs
src/js/bindings/: abort_controller.rs  blob.rs  canvas.rs  characterdata.rs  comment.rs  console.rs  crypto.rs  custom_elements.rs  doctype.rs  document.rs  document_advanced.rs  dom_parser.rs  element.rs  element_classlist.rs  element_dataset.rs  element_geometry.rs  encoding.rs  event_constructors.rs  formdata.rs  headers.rs  helpers.rs  html_constructors.rs  htmlmediaelement.rs  location.rs  messaging.rs  mod.rs  navigator.rs  node.rs  observers.rs  observers_tests.rs  shadow_root.rs  storage.rs  streams.rs  style.rs  style_tests.rs  text.rs  url.rs  window.rs  xhr.rs
src/net/: cookies.rs  cookies_tests.rs  fetch.rs  fetch_tests.rs  http_cache.rs  http_cache_tests.rs  mod.rs  request.rs  request_tests.rs  response.rs  response_tests.rs
tests/: analyze_intl_usage.py  analyze_missing_apis.py  conftest.py  debug_slow_fetch.py  html5lib_conformance.rs  profile_sites.py  test_actions.py  test_async_concurrency.py  test_async_module_level.py  test_async_smoke.py  test_batch.py  test_benchmark.py  test_chrome_comparison.py  test_chrome_conformance.py  test_cli.py  test_config.py  test_console_capture.py  test_constructors.py  test_dialog_handling.py  test_dom.py  test_dom_methods.py  test_domino_smoke.py  test_e2e.py  test_error_context.py  test_events.py  test_fetch.py  test_gauntlet.py  test_image_format.py  test_js_pool_config.py  test_modules.py  test_new_api_conformance.py  test_per_fetch_blocking.py  test_per_fetch_headers_no_leak.py  test_per_fetch_headers_validate.py  test_per_fetch_nav_blocking.py  test_per_fetch_referer.py  test_per_fetch_scripts.py  test_pool_integrity.py  test_post_load_results.py  test_post_load_scripts.py  (+14 more)
tests/e2e/: conftest.py  test_components.py  test_dom_core.py  test_elements.py  test_events.py  test_scripts.py  test_template.py  test_web_apis.py
