[package]
name = "blazeweb"
version = "2.0.0-alpha.0"
edition = "2024"
publish = false

[lib]
name = "_blazeweb"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }

# Chromium via CDP — the new engine
chromiumoxide = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "io-std"] }
futures = "0.3"

# Rust-side HTML query — backs RenderResult.dom
scraper = "0.22"

# Misc
url = "2"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
