[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "blazeweb"
version = "2.0.0a0"
description = "Fast URL → fully-rendered HTML + optional screenshot for Python, powered by Chromium via CDP"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpserver>=1.1",
    "ruff>=0.6",
    "mypy>=1.11",
]
bench = [
    "pytest>=8",
    "playwright>=1.49",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.maturin]
python-source = "python"
module-name = "blazeweb._blazeweb"
features = ["pyo3/extension-module"]
include = [
    { path = "python/blazeweb/_binaries/**/*", format = "wheel" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "benchmark: performance regression tests",
    "real_sites: gauntlet tests against real production websites",
    "threading: multi-thread / concurrency tests",
]
